--- a/pom.xml
+++ b/pom.xml
@@ -3,23 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>ImageComparator</groupId>
     <artifactId>ImageComparator</artifactId>
     <version>1.0</version>
-
     <packaging>jar</packaging>
 
 <dependencies>
     <dependency>
         <groupId>org.im4java</groupId>
         <artifactId>im4java</artifactId>
-        <version>1.4.0</version>
+        <version>LATEST</version>
     </dependency>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
-        <version>2.45.0</version>
+        <version>LATEST</version>
     </dependency>
         </dependencies>
 </project>
