--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ImageComparator</groupId>
-    <artifactId>ImageComparator</artifactId>
+    <groupId>ImageComparisonManager</groupId>
+    <artifactId>ImageComparisonManager</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
@@ -17,6 +17,11 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
             <version>LATEST</version>
         </dependency>
     </dependencies>
